              supply a Standard Output accepter.  Introduced in 10.40.

              ppmtobmp: fix bug: crash ("internal error") or bogus failure or
              incorrect output on image without palette (e.g. black and
              white).  Introduced in 10.54.

              pnmtops: fix floating point exception or bogus width/height
              too large error.  Introduced in 10.53.

              Build: Pnmtopng, Pamrgbatopng compile with newer libpng,
              as they no longer refer to private members of the pnginfo
              structure.

              Build: fix undefined "strsol" and "vsnprintfN" failure on
              systems without vasprintf().  Introduced in 10.53.

              Build: fix compiler warning in pbmtocmuwm.

              configure: fix selection of mingw compiler.  Introduced in
              10.48.

11.03.30 BJH  Release 10.54.00

              Add pamrubber.  Thanks Willem van Schaik <willem@schaik.com>.

              Add ppmtoapplevol.  Thanks Matthew Garrett
              <mjg59@srcf.ucam.org>.

              Add pamwipeout.  Thanks Willem van Schaik <willem@schaik.com>.

              pngtopam: add -byrow.

              pnmtopclxl: add -embedded.

              pgmtoascii: Truncates instead of undefined behavior if input
              image is wider than specified width.

              Add libpamd (PAM version of classic libppmd drawing routines).

              Rename pbmtoicon to pbmtosunicon, to go with change
              of icontopbm to sunicontopnm in 10.53.

              g3topbm: correct error message: codes go up to 13 bits.

              pamstereogram: fix crash when not doing texture.

              pgmtoascii: Fix numerous output bugs.

              pngtopam: fix bug: -verbose reports history chunk present when
              it's really a palette.

              pnmpsnr: fix bug: says PGM images differ when they don't
              and vice versa.

10.12.30 BJH  Release 10.53.00
